# AWS-BEDROCK-MINTUES

./: .env.example  .gitignore  CLAUDE.md  CLI_USAGE_DEMO.md  README-CN.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
context/: shared_knowledge.json
context/agent_briefings/: ai-engineer.md  cloud-architect.md  code-reviewer.md  fastapi-pro.md  python-pro.md  test-automator.md
docs/: API.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_STATUS.md  T011_TEST_REPORT.md  meeting.md  会议例子.md
frontend/: README_FRONTEND.md  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
prompts/: extract_info.txt  optimize_content.txt
src/: config.py
src/api/: dependencies.py  main.py
src/cli/: README.md  __init__.py  init_defaults.py
src/models/: feedback.py  meeting.py  template.py  template_v2.py
src/services/: ai_service.py  file_service.py  prompt_loader.py  template_service.py  transcription_service.py  workflow_service.py
src/storage/: __init__.py  meeting_repository.py  s3_client.py  template_repository.py
tests/: README_REAL_AWS.md  conftest.py  conftest.py.bak
tests/contract/: conftest.py  test_create_meeting.py  test_export_meeting.py  test_get_meeting.py  test_submit_feedback.py  test_templates.py
tests/fixtures/: generate_mp3.py
tests/integration/: TEST_REPORT.md  TEST_REPORT_T010.md  test_audio_to_draft.py  test_custom_template.py  test_error_scenarios.py  (+4 more)
(+31 files in other folders)
