[project]
name = "aws-bedrock-minutes"
version = "1.0.0"
description = "AI-powered meeting minutes generator with 3-stage workflow"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "uvicorn[standard]==0.24.0",
    "boto3==1.29.0",
    "python-multipart==0.0.6",
    "jinja2==3.1.2",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "moto[all]==4.2.9",
    "httpx==0.25.2",
    "ruff==0.1.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_backend"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"
